fixed alignment issues

--- a/dictionary.css
+++ b/dictionary.css
@@ -11,6 +11,18 @@ body {
     margin: 0;
     font-size: 14px;
 }
+span.romaji{
+    display:none;
+}
+td.khead{
+    font-size: 1.2em;
+    font-weight: bold;
+    clear: both;
+}
+section.kanji table td{
+    text-align: left;
+    padding-right: 10px;
+}
 p {
     float:left;
     margin:0;
@@ -18,9 +30,6 @@ p {
 }
 .KejjeYr{
     display:none;
-}
-.level0{
-    clear:both;
 }
 .level1{
     clear:both;
@@ -32,7 +41,18 @@ p {
 table, th, td {
     text-align: center;
     border-spacing: 0;
+    clear: both;
+    border-collapse:collapse;
 }
+
+table.reading-table td{
+    border: 1px solid #eee; 
+}
+table.reading-table td.level0{
+    clear:both;
+    font-weight: bold;
+}
+
 .container {
     max-width: 1000px;
     margin: 0 auto;
@@ -50,19 +70,25 @@ p.level0{
 p.level1{
     text-indent:10px;
 }
-p.level1::before{
-    content:'- ';
-}
 hr {
     clear:both;
 }
-section {
+section h1 {
     clear:both;
     background: #666;
     color: white;
     padding: 2px;
-    margin-top:5px;
-    margin-bottom: 5px;
+    padding-left: 5px;
+    font-weight: normal;
+    margin-top:10px;
+    margin-bottom: 10px;
+    width: 100%;
+    float:left;
+    font-size: 1.2em;
+}
+section.synonyms table td, section.synonyms table th{
+    border: 1px solid #eee;
+    border-collapse: collapse;
 }
 header {
     background: #222;
@@ -84,9 +110,8 @@ h1 {
 }
 
 form {
-    margin-top: 10px;
-    margin-bottom: -10px;
     position: relative;
+    text-align: center;
 }
 
 .new-task input {
@@ -134,7 +159,7 @@ font-family: 'Hiragino Mincho Pro', 'MS PMincho', serif;
 
 div.left {
     float:left;
-    width:200px;
+    width:20%;
     background:#ccc;
     padding: 20px;
     padding-top:10px;
